# sportclub

./: .env  .env.example  .gitignore  pyproject.toml  requirements.txt
club/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  views.py
club/models/: __init__.py  events.py  finance.py  members.py
club/services/: __init__.py  checkin.py  finance.py
club/view_handlers/: __init__.py  checkin.py  dashboard.py  events.py  members.py  public.py  recharge.py  shared.py
config/: settings.py  urls.py
docker/: Dockerfile  nginx-app.conf  requirements.txt  run_docker.sh  uwsgi.ini
locale/de/LC_MESSAGES/: django.mo  django.po
locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
static/css/: style.css
templates/: base.html
templates/club/: admin_dashboard.html  admin_events.html  admin_fee_management.html  admin_member_edit.html  admin_members.html  admin_recharge.html  create_event.html  dashboard.html  event_list.html  event_participants.html  history.html  home.html  member_profile.html  qr_checkin.html  recharge.html  register.html
templates/registration/: login.html
